--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="grey.css">
 </head>
 <body>
     <nav role="navigation">
@@ -16,36 +19,23 @@
     <main role="main">
         <header role="banner">
             <h1>I'm Trina </h1>
-            <h3>A passionate web developer | photographer | globe trotter</h3>
+            <h3>Headline</h3>
         </header>
 
         <section id="bio">
           <h2>Bio</h2>
-          <p>  I grew up around the world, and have always been well accustomed to cultural diversity and rapid change! As soon as I was 
-            introduced to the global tech community I was immediately hooked. I saw not only an opportunity to contribute to some          
-            of the world's leading innovations, I also saw a clear path to creative and geographical freedom.         
-            Next to coding, I am also an enthusiastic photographer and music junkie. I can be found at my local concert venue, just           
-            inches from the stage, firing away on my Canon 77D. Or hiking the trails of a State park, or natural reserve, camera-ready.</p>
+          <p> lorem imspum.......</p>
         </section>
 
         <section id="projects">
           <h2>Projects</h2>
-          <h4>Fashion Quiz App</h4>
-          <h5>Used: javaScript | jQuery | html5 | css</h5>
-          <p>In this project, I collaborated with a colleague to create a fun interactive quiz application using JavaScript, Html, and Css
-            to test the user's fashion trivia knowledge. The app returns feedback each time the user selects an answer, and tracks their score and progress throughout the quiz!
-          </p>
-          <img src="quiz-app-pic-minified.png" alt="screenshot of quiz app">
-            <div>
-                <a class="button-outline" href="https://thinkful-ei-macaw.github.io/quiz-app-Dasha-Trina/">Demo</a> 
-                <a class="button-outline" href="https://github.com/thinkful-ei-macaw/quiz-app-Dasha-Trina">GitHub Repo</a>  
-            </div>      
+              
         </section>
 
         <section id="contact">
-            <a href="https://www.linkedin.com/in/trina-mcleary-58b3b091/" class="fa fa-linkedin"></a>
-            <a href="https://github.com/Trinadactyl?tab=overview&from=2020-01-01&to=2020-01-31" class="fa fa-github"></a>
-            <a href="mailto:trinamcleary@gmail.com" class="fa fa-envelope"></a>
+            <a href="https://www.linkedin.com/in/trina-mcleary-58b3b091/"></a>
+            <a href="https://github.com/Trinadactyl?tab=overview&from=2020-01-01&to=2020-01-31" ></a>
+            <a href="mailto:trinamcleary@gmail.com" ></a>
         </section>
     </main>
     <footer role="content-info">
