--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <nav role="navigation">
-     <a class="button-outline" href="#bio">Bio</a> 
-     <a class="button-outline" href="#projects">Projects</a>
-     <a class="button-outline" href="#contact">Contact</a>
+    <nav class="nav-bar" role="navigation">
+        <ul id="menu">
+         <li><a class="button-outline" href="#bio">Bio</a></li>
+         <li><a class="button-outline" href="#projects">Projects</a></li>
+         <li><a class="button-outline" href="#contact">Contact</a></li>
+        </ul>
+       
     </nav>
     <main role="main">
         <header role="banner">
@@ -21,7 +24,7 @@
 
         <section id="bio">
           <h2>Bio</h2>
-          <p>  I grew up around the world, and have always been well accustomed to cultural diversity and rapid change! As soon as I was 
+          <p id="sum">  I grew up around the world, and have always been well accustomed to cultural diversity and rapid change! As soon as I was 
             introduced to the global tech community I was immediately hooked. I saw not only an opportunity to contribute to some          
             of the world's leading innovations, I also saw a clear path to creative and geographical freedom.         
             Next to coding, I am also an enthusiastic photographer and music junkie. I can be found at my local concert venue, just           
