--- a/index.html
+++ b/index.html
@@ -18,17 +18,23 @@
     </nav>
     <main role="main">
         <header role="banner">
-            <h1>I'm Trina </h1>
-            <h3>A passionate web developer | photographer | globe trotter</h3>
+            <div class="headline">
+                <h1>I'm Trina </h1>
+                <h3>A passionate web developer | photographer | globe trotter</h3>  
+            </div> 
         </header>
 
-        <section id="bio">
-          <h2>Bio</h2>
-          <p id="sum">  I grew up around the world, and have always been well accustomed to cultural diversity and rapid change! As soon as I was 
-            introduced to the global tech community I was immediately hooked. I saw not only an opportunity to contribute to some          
-            of the world's leading innovations, I also saw a clear path to creative and geographical freedom.         
-            Next to coding, I am also an enthusiastic photographer and music junkie. I can be found at my local concert venue, just           
-            inches from the stage, firing away on my Canon 77D. Or hiking the trails of a State park, or natural reserve, camera-ready.</p>
+        <section>
+            <div id='bio'>
+                <h2>Bio</h2>
+                <p id="sum">  I grew up around the world, and have always been well accustomed to cultural diversity and rapid change! As soon as I was 
+                introduced to the global tech community I was immediately hooked. I saw not only an opportunity to contribute to some          
+                of the world's leading innovations, I also saw a clear path to creative and geographical freedom.         
+                Next to coding, I am also an enthusiastic photographer and music junkie. I can be found at my local concert venue, just           
+                inches from the stage, firing away on my Canon 77D. Or hiking the trails of a State park, or natural reserve, camera-ready.</p>
+            </div>
+            <img src="DSC_5481.JPG" alt="me" id="me">
+          
         </section>
 
         <section id="projects">
