--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </nav>
     <main role="main">
         <header role="banner">
-            <div class="headline">
+            <div id="headline">
                 <h1>I'm Trina </h1>
                 <h3>A passionate web developer | photographer | globe trotter</h3>  
             </div> 
