working on styles

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <nav class="nav-bar" role="navigation">
         <ul id="menu">
-         <li><a class="button-outline" href="#bio">Bio</a></li>
-         <li><a class="button-outline" href="#projects">Projects</a></li>
-         <li><a class="button-outline" href="#contact">Contact</a></li>
+         <li><a class="links" href="#bio">Bio</a></li>
+         <li><a class="links" href="#projects">Projects</a></li>
+         <li><a class="links" href="#contact">Contact</a></li>
         </ul>
        
     </nav>
@@ -24,17 +24,16 @@
             </div> 
         </header>
 
-        <section>
-            <div id='bio'>
+        <section id="bio">
+            <div>
                 <h2>Bio</h2>
                 <p id="sum">  I grew up around the world, and have always been well accustomed to cultural diversity and rapid change! As soon as I was 
                 introduced to the global tech community I was immediately hooked. I saw not only an opportunity to contribute to some          
                 of the world's leading innovations, I also saw a clear path to creative and geographical freedom.         
                 Next to coding, I am also an enthusiastic photographer and music junkie. I can be found at my local concert venue, just           
-                inches from the stage, firing away on my Canon 77D. Or hiking the trails of a State park, or natural reserve, camera-ready.</p>
+                inches from the stage, firing away on my Canon 77D. Or hiking the trails of a State park, or natural reserve, camera-ready.</p>                 
             </div>
-            <img src="DSC_5481.JPG" alt="me" id="me">
-          
+            <img id="me" src="DSC_5481.JPG" alt="me">  
         </section>
 
         <section id="projects">
@@ -46,8 +45,8 @@
           </p>
           <img src="quiz-app-pic-minified.png" alt="screenshot of quiz app">
             <div>
-                <a class="button-outline" href="https://thinkful-ei-macaw.github.io/quiz-app-Dasha-Trina/">Demo</a> 
-                <a class="button-outline" href="https://github.com/thinkful-ei-macaw/quiz-app-Dasha-Trina">GitHub Repo</a>  
+                <a class="links" href="https://thinkful-ei-macaw.github.io/quiz-app-Dasha-Trina/">Demo</a> 
+                <a class="links" href="https://github.com/thinkful-ei-macaw/quiz-app-Dasha-Trina">GitHub Repo</a>  
             </div>      
         </section>
 
