--- a/index.html
+++ b/index.html
@@ -24,27 +24,27 @@
             </div> 
         </header>
 
-        <section id="bio">
-            <div>
-                <h2>Bio</h2>
+       <section id="bio-section"> 
+ 
+            <h2>Bio</h2>
                 <p id="sum">  I grew up around the world, and have always been well accustomed to cultural diversity and rapid change! As soon as I was 
                 introduced to the global tech community I was immediately hooked. I saw not only an opportunity to contribute to some          
                 of the world's leading innovations, I also saw a clear path to creative and geographical freedom.         
                 Next to coding, I am also an enthusiastic photographer and music junkie. I can be found at my local concert venue, just           
                 inches from the stage, firing away on my Canon 77D. Or hiking the trails of a State park, or natural reserve, camera-ready.</p>                 
-            </div>
-            <img id="me" src="DSC_5481.JPG" alt="me">  
+
+            <img id="me" src="resize.jpg" alt="me">  
         </section>
 
-        <section id="projects">
+        <section id="project-section">
           <h2>Projects</h2>
           <h4>Fashion Quiz App</h4>
           <h5>Used: javaScript | jQuery | html5 | css</h5>
           <p>In this project, I collaborated with a colleague to create a fun interactive quiz application using JavaScript, Html, and Css
             to test the user's fashion trivia knowledge. The app returns feedback each time the user selects an answer, and tracks their score and progress throughout the quiz!
           </p>
-          <img src="quiz-app-pic-minified.png" alt="screenshot of quiz app">
-            <div>
+          <img id="quiz-pic" src="quiz-app-pic-minified.png" alt="screenshot of quiz app">
+            <div class="project-buttons">
                 <a class="links" href="https://thinkful-ei-macaw.github.io/quiz-app-Dasha-Trina/">Demo</a> 
                 <a class="links" href="https://github.com/thinkful-ei-macaw/quiz-app-Dasha-Trina">GitHub Repo</a>  
             </div>      
