update bio, fix validation errors

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <title>Trina's Portfolio</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8" >
     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Gentium+Basic|Muli|Open+Sans:600|Ovo&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Gentium+Basic%7CMuli%7COpen+Sans:600%7COvo&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <nav class="nav-bar" role="navigation">
+    <nav class="nav-bar">
         <ul id="menu">
          <li><a class="links" href="#bio">Bio</a></li>
          <li><a class="links" href="#projects">Projects</a></li>
@@ -17,27 +17,28 @@
         </ul>
        
     </nav>
-    <main role="main">
-        <header role="banner">
+    <main>
+        <header>
             <div id="headline">
                 <h1>I'm Trina </h1>
                 <h3>A passionate web developer | photographer | globe trotter</h3>  
             </div> 
         </header>
 
-       <section id="bio-section"> 
+       <section id="bio"> 
  
             <h2>Bio</h2>
-                <p id="sum">  I grew up around the world, and have always been well accustomed to cultural diversity and rapid change! As soon as I was 
-                introduced to the global tech community I was immediately hooked. I saw not only an opportunity to contribute to some          
-                of the world's leading innovations, I also saw a clear path to creative and geographical freedom.         
+                <p id="sum">  I grew up around the world, and have always been well accustomed to cultural diversity and rapid change! Upon being 
+                introduced to the global tech community, I saw not only an opportunity to contribute to some          
+                of the world's leading innovations, I also saw a clear path to creative and geographical freedom.</p>         
+                <p>I'm a fullstack web developer on an everlasting learning journey, who's excited to join a team of other talented programmers. 
                 Next to coding, I am also an enthusiastic photographer and music junkie. I can be found at my local concert venue, just           
                 inches from the stage, firing away on my Canon 77D. Or hiking the trails of a State park, or natural reserve, camera-ready.</p>                 
 
             <img id="me" src="resize.jpg" alt="me">  
         </section>
 
-        <section id="project-section">
+        <section id="projects">
           <h2>Projects</h2>
           <h4>Fashion Quiz App</h4>
           <h5>Used: javaScript | jQuery | html5 | css</h5>
@@ -52,12 +53,13 @@
         </section>
 
         <section id="contact">
+            <h4>Get in Touch!</h4>
             <a href="https://www.linkedin.com/in/trina-mcleary-58b3b091/" class="fa fa-linkedin"></a>
             <a href="https://github.com/Trinadactyl?tab=overview&from=2020-01-01&to=2020-01-31" class="fa fa-github"></a>
             <a href="mailto:trinamcleary@gmail.com" class="fa fa-envelope"></a>
         </section>
     </main>
-    <footer role="content-info">
+    <footer >
         Proudly created by Trina McLeary
     </footer>
 </body>
