--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Trina's Portfolio</title>
     <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Gentium+Basic%7CMuli%7COpen+Sans:600%7COvo&display=swap" rel="stylesheet">
@@ -21,7 +22,7 @@
         <header>
             <div id="headline">
                 <h1>I'm Trina </h1>
-                <h3>A passionate web developer | photographer | globe trotter</h3>  
+                <h2>A passionate web developer | photographer | globe trotter</h2>  
             </div> 
         </header>
 
@@ -39,24 +40,24 @@
         </section>
 
         <section id="projects">
-          <h2>Projects</h2>
+          <h3>Projects</h3>
           <h4>Fashion Quiz App</h4>
-          <h5>Used: javaScript | jQuery | html5 | css</h5>
+          <h5>Used: JavaScript | jQuery | HTML5 | CSS</h5>
           <p>In this project, I collaborated with a colleague to create a fun interactive quiz application using JavaScript, Html, and Css
             to test the user's fashion trivia knowledge. The app returns feedback each time the user selects an answer, and tracks their score and progress throughout the quiz!
           </p>
           <img id="quiz-pic" src="quiz-app-pic-minified.png" alt="screenshot of quiz app">
             <div class="project-buttons">
-                <a class="links" href="https://thinkful-ei-macaw.github.io/quiz-app-Dasha-Trina/">Demo</a> 
-                <a class="links" href="https://github.com/thinkful-ei-macaw/quiz-app-Dasha-Trina">GitHub Repo</a>  
+                <a target="_blank" class="links" href="https://thinkful-ei-macaw.github.io/quiz-app-Dasha-Trina/">Demo</a> 
+                <a target="_blank" class="links" href="https://github.com/thinkful-ei-macaw/quiz-app-Dasha-Trina">GitHub Repo</a>  
             </div>      
         </section>
 
         <section id="contact">
             <h4>Get in Touch!</h4>
-            <a href="https://www.linkedin.com/in/trina-mcleary-58b3b091/" class="fa fa-linkedin"></a>
-            <a href="https://github.com/Trinadactyl?tab=overview&from=2020-01-01&to=2020-01-31" class="fa fa-github"></a>
-            <a href="mailto:trinamcleary@gmail.com" class="fa fa-envelope"></a>
+            <a target="_blank" aria-label="LinkedIn" href="https://www.linkedin.com/in/trina-mcleary-58b3b091/" class="fa fa-linkedin"></a>
+            <a target="_blank" aria-label="Github" href="https://github.com/Trinadactyl?tab=overview&from=2020-01-01&to=2020-01-31" class="fa fa-github"></a>
+            <a target="_blank" aria-label="Email" href="mailto:trinamcleary@gmail.com" class="fa fa-envelope"></a>
         </section>
     </main>
     <footer >
