add hidden link

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <header>
             <div id="headline">
                 <h1>I'm Trina </h1>
-                <h2>A passionate web developer | photographer | globe trotter</h2>  
+                <h2>A passionate web developer | <a target="_blank" id="wix" href="http://trinamcleary.wix.com/RabidSnaps">photographer</a> | globe trotter</h2>  
             </div> 
         </header>
 
