update file structure

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 Next to coding, I am also an enthusiastic photographer and music junkie. I can be found at my local concert venue, just           
                 inches from the stage, firing away on my Canon 77D. Or hiking the trails of a State park, or natural reserve, camera-ready.</p>                 
 
-            <img id="me" src="resize.jpg" alt="me">  
+            <img id="me" src="./pictures/resize.jpg" alt="me">  
         </section>
 
         <section id="projects">
@@ -46,7 +46,7 @@
           <p>In this project, I collaborated with a colleague to create a fun interactive quiz application using JavaScript, Html, and Css
             to test the user's fashion trivia knowledge. The app returns feedback each time the user selects an answer, and tracks their score and progress throughout the quiz!
           </p>
-          <img id="quiz-pic" src="quiz-app-pic-minified.png" alt="screenshot of quiz app">
+          <img id="quiz-pic" src="./pictures/quiz-app-pic-minified.png" alt="screenshot of quiz app">
             <div class="project-buttons">
                 <a target="_blank" class="links" href="https://thinkful-ei-macaw.github.io/quiz-app-Dasha-Trina/">Demo</a> 
                 <a target="_blank" class="links" href="https://github.com/thinkful-ei-macaw/quiz-app-Dasha-Trina">GitHub Repo</a>  
