--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
 </head>
 <body>
     <nav class="nav-bar">
-        <ul id="menu">
-         <li><a class="links" href="#bio">Bio</a></li>
-         <li><a class="links" href="#projects">Projects</a></li>
-         <li><a class="links" href="#contact">Contact</a></li>
-        </ul>
-       
+        <a href="#bio" class="nav-link">Bio</a>
+        <a href="#projects" class="nav-link">Projects</a>
+        <a href="#contact" class="nav-link">Contact</a>
     </nav>
+
     <main>
         <header>
             <div id="headline">
@@ -26,8 +24,7 @@
             </div> 
         </header>
 
-       <section id="bio"> 
- 
+       <!-- <section id="bio"> 
             <h2>Bio</h2>
                 <p id="sum">  I grew up around the world, and have always been well accustomed to cultural diversity and rapid change! Upon being 
                 introduced to the global tech community, I saw not only an opportunity to contribute to some          
@@ -58,10 +55,11 @@
             <a target="_blank" aria-label="LinkedIn" href="https://www.linkedin.com/in/trina-mcleary-58b3b091/" class="fa fa-linkedin"></a>
             <a target="_blank" aria-label="Github" href="https://github.com/Trinadactyl?tab=overview&from=2020-01-01&to=2020-01-31" class="fa fa-github"></a>
             <a target="_blank" aria-label="Email" href="mailto:trinamcleary@gmail.com" class="fa fa-envelope"></a>
-        </section>
+        </section> -->
+        
     </main>
-    <footer >
+    <!-- <footer >
         Proudly created by Trina McLeary
-    </footer>
+    </footer> -->
 </body>
 </html>
