bio comin along aye

--- a/index.html
+++ b/index.html
@@ -11,31 +11,21 @@
 </head>
 <body>
     <nav class="nav-bar">
-        <a href="#bio" class="nav-link">Bio</a>
+        <a href="index.html" class="nav-link">Home</a>
+        <a href="./bio.html" class="nav-link">Bio</a>
         <a href="#projects" class="nav-link">Projects</a>
         <a href="#contact" class="nav-link">Contact</a>
     </nav>
 
-    <main>
+    <main id="hero">
         <header>
             <div id="headline">
                 <h1>I'm Trina </h1>
-                <h2>A passionate web developer | <a target="_blank" id="wix" href="http://trinamcleary.wix.com/RabidSnaps">photographer</a> | globe trotter</h2>  
+                <h2>Passionate web developer | <a target="_blank" id="wix" href="http://trinamcleary.wix.com/RabidSnaps">photographer</a> | globe trotter</h2>  
             </div> 
         </header>
 
-       <!-- <section id="bio"> 
-            <h2>Bio</h2>
-                <p id="sum">  I grew up around the world, and have always been well accustomed to cultural diversity and rapid change! Upon being 
-                introduced to the global tech community, I saw not only an opportunity to contribute to some          
-                of the world's leading innovations, I also saw a clear path to creative and geographical freedom.</p>         
-                <p>I'm a fullstack web developer on an everlasting learning journey, who's excited to join a team of other talented programmers. 
-                Next to coding, I am also an enthusiastic photographer and music junkie. I can be found at my local concert venue, just           
-                inches from the stage, firing away on my Canon 77D. Or hiking the trails of a State park, or natural reserve, camera-ready.</p>                 
-
-            <img id="me" src="./pictures/resize.jpg" alt="me">  
-        </section>
-
+       <!-- 
         <section id="projects">
           <h3>Projects</h3>
           <h4>Fashion Quiz App</h4>
